app/assets/stylesheets/application.scss
@import "bootstrap"; 
@import "ecosystems"; 

.text-decoration-hover{
  text-decoration: none;
  &:hover{
    text-decoration: underline;
  }
}
body {
  font-optical-sizing: auto;
}

pre code.hljs{
  padding: 0 !important;
}

#readme-body img, #readme-body table{
  max-width: 100%;
}

.registry{
  @include media-breakpoint-up(sm){
    min-height: 200px;
  }
}

.header {
  display: flex;
  align-items: center;
}

.site-logo {
  background-image: asset-url('ecosystems-advisories-logo.svg');
  width: 425px;
  height: 50px;
}

.site-logo--white {
	background-image: asset-url('ecosystems-logo-white.svg');
  width: 246px;
  }

.site-name {
  line-height: 50px;
  display: inline-block;
  vertical-align: middle;
  font-size: 40px;
  font-weight: 400;
  color: $color-purple;
  padding-top: 70px;
}

.advisory-listing {
  border: 0;
  border-radius: 0;
  border-bottom: 3px solid $color-purple-light;
  padding: 0;
}

.advisory-listing

.advisory-listing__title {
	@include font-size(1rem);
  a {
    text-decoration: none;
    color: $color-black;
    &:hover,
    &:active,
    &:focus {
      
    }
  }
}

.advisory-listing__id {
	font-weight: normal;
	color: $color-grey-dark;
	@include font-size(0.875rem);
}

.advisory-listing__details {
  @include font-size(0.875rem);
}

.advisory-listing__time {
  margin-top: 0.3888888889; //gross number but it aligns the baseline with the severity badge
  @include font-size(0.7777777778rem);
}

// TODO - this is a mess, bootstrap config is ignoring this in the main file

.badge-warning {
  background-color: $bootstrap-warning;
}

.badge-danger {
  background-color: $bootstrap-danger;
  color: $color-white;
}

.badge-dark {
  background-color: $color-black;
  color: $color-white;
}

.badge-light {
  background-color: $color-grey-light;
}

.listing-filters {
  .list-group-item {
    @include font-size(0.875rem);
    border-color: $color-grey;
    word-break: break-word;
  }
}

.listing-controls {
  .dropdown-item.active,
  .dropdown-item:active {
    background-color: $color-purple;
  }
}

.advisory-header__meta__text {
  @include font-size(1rem);
  line-height: 1.4rem;
}

.advisory-header__title {
  line-break: anywhere;
}

.ecosystems-table {
  border: 0;
  border-width: 0;
  border-color: transparent;
  tbody {
    border: 0;
  }
  th {
    border: 0;
    border-bottom: 3px solid $color-purple-light;;
  }
  tr {
    border-bottom: 1px solid $color-purple-light;
  }
  td {
    border: 0;
  }
  tr:has(+ .collapse-row) {
	border-bottom: 1px solid transparent;
  }
}

.sidebar {
	background-color: $color-grey-light;
	p { 
		@include font-size(1rem);
	}
	h2 {
		@include font-size(1.25rem);

    border-top: 1px solid $color-purple-light;
    padding-top: 1rem;
    &:first-of-type {
      border-top: 0;
      padding-top: 0;
    }
	}

	h3 {
		@include font-size(1rem);
    
	}

  code {
    color: $color-purple-dark;
  }

  a {
    @include spesh-link();
  }
}

.page-content {
  a {
    line-break: loose;
  }
}

.purple-grad-bg {
  a {
    color: $color-white;
  }
  .breadcrumb,
  .breadcrumb-item + .breadcrumb-item::before {
    color: $color-white;
    
  }
}

