Fix overflowing links in sidebar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,6 +181,7 @@ pre code.hljs{
 
   a {
     @include spesh-link();
+    line-break: anywhere;
   }
 }
 
